@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <UpdateVersion xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <Version>560</Version>
-  <Date>2019-09-25T00:00:00+05:30</Date>
+  <Version>565</Version>
+  <Date>2019-10-12T00:00:00+05:30</Date>
 </UpdateVersion>
