@@ -1,4 +1,11 @@
-﻿23 Apr 2016
+﻿
+12 Oct 2019
+Create / Save Meta (txt)
+
+25 Sep 2019
+Make lyrics a control, ExtensionFilter
+
+23 Apr 2016
 Added DataManager for cleaning movie list
 
 20 Nov 2015
